fixed squished constrained image when in mobile view, fixed col issue on posts

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -121,7 +121,7 @@ $color30darken: darken($color1, 30%);
 
 .thumbnail img {
     max-width: 100%;
-    overflow: hidden;
+    // max-height: 100%;
     filter: opacity(20%);
 }
 
